tests/reference/asr-derived_type_01-d480dc4.stderr
semantic error: Interface must be specified for DEFERRED binding
 --> tests/errors/derived_type_01.f90:7:39
  |
7 |         procedure(testing_interface), deferred  :: testing
  |                                       ^^^^^^^^ 
